# Dgree720.github.io

./: .gitignore  chatbot.js  index.html  main.py  pyproject.toml
1code/: 10Unit10_1st1.py  11Unit11_1llm1.py  11Unit11_2llm2.py  11Unit11_3llm3.py  12Unit12_2NST2.py  13Unit13_1torch1.py  13Unit13_4torch4.py  15Unit15_1yolo1.py  15Unit15_2yolo2.py  16_0LLM00.py  16_0LLM00G.py  16_1LLM01G.py  16_2LLM02.py  16_2LLM02G.py  16_3LLM03.py  16_3LLM03G.py  16_3LLM03s.py  16_4LLM04.py  16_5LLM05.py  16_6LLM06.py  16_6LLM06G.py  16_7LLM07.py  16_8LLM08.py  16_8LLM08G.py  17_1LLM01.py  17_2LLM02.py  18_1RAG01.py  18_2RAG02.py  18_3RAG03.py  18_4RAG04.py  18_5RAG05.py  18_6RAG06.py  18_7RAG07.py  18_8RAG08.py  1Unit01_1pic.py  1Unit01_3ytb.py  2Unit02_1CV1.py  2Unit02_3CV3.py  3Unit03_1ob_pic.py  3Unit03_2ob_video.py  (+12 more)
1code/models/: keras_model.h5  keras_model.h51  labels.txt  mac.yml
1code/unit1to5/: 1Unit01_1pic.py  1Unit01_2Video.py  1Unit01_3ytb.py  2Unit02_2CV2.py  2Unit02_4CV4.py  2Unit02_5CV5.py  3Unit03_3ob_ytb.py  4Unit04_1_seg1.py  4Unit04_2_seg2.py  5Unit05_1face.py  5Unit05_2Face2.py
1code/unita1011/: 10Unit10_2st2.py  11Unit11_1llm1.py
1code/unitb6789/: 6Unit06_2face2.py  7Unit07_4pose4.py  9Unit09_1gesture1.py  9Unit09_2gesture2.py
1code/unitc12131415/: 12Unit12_1NST1.py  12Unit12_3NST3.py  12Unit12_4NST4.py  12Unit12_5NST5.py  13Unit13_2torch2.py  13Unit13_3torch3.py  14Unit14_1TFNST1.py  14Unit14_2TFNST2.py  14Unit14_3TFNST3.py  15Unit15_3yolo3.py  15Unit15_4yolo4.py  15Unit15_5yolo5.py  transformer_net.py
1code/unitd161718/: 16_0LLM00.py  16_0LLM00G.py  16_1LLM01.py  16_1LLM01G.py  16_2LLM02.py  16_2LLM02G.py  16_3LLM03.py  16_3LLM03G.py  16_3LLM03s.py  16_4LLM04.py  16_5LLM05.py  16_6LLM06.py  16_6LLM06G.py  16_7LLM07.py  (+11 more)
2xtra/: x2025AI_QA.pptx
(+6 files in other folders)
