[project]
name = "dgree720-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "chromadb>=1.1.1",
    "fastembed>=0.7.3",
    "gensim==4.3.3",
    "gtts>=2.5.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-ollama>=0.3.10",
    "llama-cpp-python>=0.3.16",
    "mediapipe>=0.10.14",
    "ollama>=0.6.0",
    "openai>=2.5.0",
    "opencv-python<4.9.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pypdf>=6.1.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "scipy<1.13",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "tensorflow>=2.19.1",
    "tensorflow-hub>=0.16.1",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.217",
    "yt-dlp>=2025.10.14",
]
